feat(B10a): добавить can_delete в AttachmentRead по запросу Dev2 (F04)
